tests/rosetta/out/Java/benfords-law.error
javac error: exit status 1
/tmp/TestMochiToJavabenfords-law4086297028/001/BenfordsLaw.java:7: error: incompatible types: double cannot be converted to String
        return Double.parseDouble(String.valueOf((Integer.parseInt(x))));
                                                                   ^
/tmp/TestMochiToJavabenfords-law4086297028/001/BenfordsLaw.java:71: error: incompatible types: double cannot be converted to String
        return Integer.parseInt(x);
                                ^
/tmp/TestMochiToJavabenfords-law4086297028/001/BenfordsLaw.java:76: error: incompatible types: Number cannot be converted to double
            int d = leadingDigit(n);
                                 ^
/tmp/TestMochiToJavabenfords-law4086297028/001/BenfordsLaw.java:78: error: incompatible types: double cannot be converted to Integer
                counts.set(d - 1, ((Number)counts.get(d - 1)).doubleValue() + 1);
                                                                            ^
/tmp/TestMochiToJavabenfords-law4086297028/001/BenfordsLaw.java:87: error: incompatible types: Integer cannot be converted to List
            double obs = ((Number)(Double.parseDouble(String.valueOf(((List)counts.get(i)))))).doubleValue() / (Double.parseDouble(String.valueOf(total)));
                                                                                      ^
/tmp/TestMochiToJavabenfords-law4086297028/001/BenfordsLaw.java:88: error: incompatible types: String cannot be converted to Number
            int line = "  " + String.valueOf(i + 1) + "  " + padFloat3(obs, 9) + "  " + ((Number)padFloat3(preds.get(i), 8)).doubleValue();
                                                                                                          ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
6 errors
